--- a/source/sass/blocks/discounts-card.scss
+++ b/source/sass/blocks/discounts-card.scss
@@ -51,27 +51,54 @@
   }
 
   @include vp-767 {
+    display: flex;
     width: 290px;
     margin: 0 auto;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: start;
+    gap: 0;
 
     &:first-of-type {
       margin-top: 0;
+      display: flex;
+      width: 320px;
+      margin: 0 auto;
+      flex-direction: column;
+      flex-wrap: wrap;
+      justify-content: start;
+      gap: 0;
     }
 
     &:nth-last-of-type(2n) {
       margin-top: 40px;
 
+      .discounts-card__title {
+        font-family: $font-roboto-bold;
+        font-size: 22px;
+        line-height: 22px;
+        letter-spacing: 0;
+      }
+
       .discounts-card__description {
-        margin: 10px auto 5px;
+        margin: 13px auto 5px;
         padding: 0;
+        letter-spacing: -1px;
       }
     }
 
     &:last-of-type {
       margin-top: 30px;
 
+      .discounts-card__title {
+        font-family: $font-roboto-bold;
+        font-size: 22px;
+        line-height: 22px;
+        letter-spacing: 0;
+      }
+
       .discounts-card__description {
-        margin: 10px auto 5px;
+        margin: 13px auto 5px;
         padding: 0;
       }
     }
@@ -91,7 +118,7 @@
   }
 
   @include vp-767 {
-    padding: 16px 28px 20px;
+    padding: 21px 28px 20px;
     gap: 5px;
   }
 }
@@ -115,10 +142,8 @@
     }
 
     @include vp-767 {
-      gap: 15px;
-      grid-row: 1/ 2;
-      grid-column: 1 /3;
-      padding: 25px 44px 30px;
+      gap: 3px;
+      padding: 26px 44px 30px;
     }
   }
 
@@ -153,7 +178,7 @@
     }
 
     @include vp-767 {
-      margin: 0 auto;
+      margin: 13px auto 0;
       min-width: 74px;
     }
   }
@@ -171,7 +196,7 @@
       margin: 0 auto 4px;
       padding: 0;
       line-height: 20px;
-      letter-spacing: -0.15px;
+      letter-spacing: 0;
     }
   }
 }
@@ -228,6 +253,7 @@
   line-height: 68px;
 
   @include vp-1365 {
+    font-family: $font-roboto-bold;
     margin: -13px 0 0 1px;
     font-size: 68px;
     line-height: 68px;
@@ -235,11 +261,11 @@
   }
 
   @include vp-767 {
-    margin: 0 0 24px;
+    margin: 0 0 25px;
     text-align: center;
-    font-size: 61px;
-    line-height: 42px;
-    letter-spacing: 2.25px;
+    font-size: 64px;
+    line-height: 64px;
+    letter-spacing: 0;
   }
 }
 
@@ -341,5 +367,6 @@
 
   @include vp-767 {
     margin: 0 auto;
+    padding: 8px 0 7px;
   }
 }
