--- a/source/sass/blocks/discounts-card.scss
+++ b/source/sass/blocks/discounts-card.scss
@@ -83,7 +83,7 @@
       .discounts-card__description {
         margin: 13px auto 5px;
         padding: 0;
-        letter-spacing: -1px;
+        letter-spacing: -0.75px;
       }
     }
 
@@ -100,6 +100,7 @@
       .discounts-card__description {
         margin: 13px auto 5px;
         padding: 0;
+        letter-spacing: -1px;
       }
     }
   }
@@ -180,6 +181,11 @@
     @include vp-767 {
       margin: 13px auto 0;
       min-width: 74px;
+      font-family: $font-roboto-bold;
+      padding: 9px 0 5px;
+      font-size: 14px;
+      line-height: 14px;
+      letter-spacing: 0;
     }
   }
 
@@ -273,8 +279,7 @@
   margin: 0;
   font-size: 16px;
   font-weight: 300;
-
-  letter-spacing: -0.15px;
+  font-family: $font-roboto-light;
 
   br {
     display: none;
@@ -310,6 +315,7 @@
   width: fit-content;
   margin-top: auto;
   padding: 7px 0 5px;
+  font-family: $font-roboto-bold;
   font-size: 14px;
   font-weight: 700;
   line-height: 14px;
@@ -367,6 +373,9 @@
 
   @include vp-767 {
     margin: 0 auto;
-    padding: 8px 0 7px;
+    padding: 8px 0 5px;
+    font-size: 14px;
+    line-height: 14px;
+    letter-spacing: 0;
   }
 }
