--- a/source/sass/blocks/accordion.scss
+++ b/source/sass/blocks/accordion.scss
@@ -29,7 +29,7 @@
 
 .accordion__title {
   margin: 0;
-  font-family: $font-roboto-light;
+  font-family: $font-roboto;
   font-size: 24px;
   font-weight: 400;
   line-height: 24px;
@@ -163,6 +163,7 @@
     font-size: 20px;
     line-height: 20px;
     width: 163px;
+    letter-spacing: 0;
   }
 
   .accordion__title > br {
