--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -81,6 +81,10 @@
       @include vp-1365 {
         margin: 0 0 4px;
       }
+
+      @include vp-767 {
+        margin: 0 0 8px;
+      }
     }
 
     .contacts-card:last-child .contacts-card__title {
@@ -88,6 +92,10 @@
 
       @include vp-1365 {
         margin: 0 0 4px;
+      }
+
+      @include vp-767 {
+        margin: 0 0 8px;
       }
     }
   }
